--- a/app/src/main/res/layout/note_layout.xml
+++ b/app/src/main/res/layout/note_layout.xml
@@ -2,23 +2,24 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/cardView"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="5dp"
+    android:background="@drawable/selector"
     app:cardCornerRadius="4dp"
     android:elevation="5dp">
 
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:layout_gravity="start"
         android:padding="7dp">
 
         <TextView
             android:id="@+id/noteTitleView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
+            android:gravity="start"
             android:text="Title"
             android:layout_margin="2dp"
             android:textColor="#000"
@@ -31,7 +32,7 @@
             android:layout_below="@+id/noteTitleView"
             android:layout_margin="5dp"
             android:layout_marginTop="10dp"
-            android:layout_centerHorizontal="true"
+            android:gravity="start"
             android:text="Content"
             android:textSize="15sp" />
 
